# MowPlanner

./: README.md
back_end/include/utils/: se2traj.hpp
back_end/src/: alm_traj_opt.cpp
mpc_controller/: package.xml
mpc_controller/scripts/: local_planner.py  traj_generate.py
mpc_controller/src/: mpc.cpp
mpc_follower/: CMakeLists.txt  package.xml
mpc_follower/launch/: mpc_planner.launch
mpc_follower/scripts/: MPC.py  local_planner.py  traj_generate.py
path_planner/: CMakeLists.txt  package.xml
path_planner/config/: jsp.bag  kino_astar_path.bag  param.yaml  traj.rviz
path_planner/include/: alm_traj_opt.h  coverage_path_planner.h
path_planner/include/path_planner/: coverage_path_planner.h
path_planner/include/utils/: se2traj.hpp
path_planner/launch/: debug.launch  mow_planner_sim.launch
path_planner/scripts/: path_pub.py
path_planner/src/: alm_traj_opt.cpp  coverage_path_node.cpp  coverage_path_planner.cpp  planner_node.cpp
plan_manager/: CMakeLists.txt  package.xml
plan_manager/include/plan_manager/: plan_manager.h
plan_manager/msg/: SE2Traj.msg
plan_manager/params/: run_hill.yaml
plan_manager/src/: plan_manager.cpp
skid4wd_description/: CMakeLists.txt  package.xml
skid4wd_description/config/: controller.yaml  skid4wd_orabmap_rviz.rviz  skid4wd_rviz.rviz  skid4wd_uneven_rviz.rviz
skid4wd_description/include/: robot_wrench.h
skid4wd_description/launch/: controller.launch  rs_rtabmap_d435.launch  sim_with_controller.launch  sim_with_uneven.launch  spawn.launch  spawn_uneven.launch
skid4wd_description/meshes/Lawn/: model.sdf
skid4wd_description/scripts/: odom_process.py
skid4wd_description/src/: contactRead.cpp
skid4wd_description/urdf/: skid4wd.xacro  terrain.blend  terrain.dae
skid4wd_description/worlds/: lawn_world.world  slope_world.world  slope_world_20deg.world
support file/: UnevenPlanner论文解析.md
support_file/: Probelm.md  UnevenPlanner论文解析.md  打滑相关优化问题建模.md  无约束优化问题.md  相关论文解析.md  约束优化问题.md  读取Gazebo接触点的力&力矩.md  轮胎利用率.md
uneven_map/maps/: terrain.mtl  to_pcl.py
uneven_map/src/: uneven_map.cpp
willand_description/: CMakeLists.txt  package.xml
willand_description/config/: controller.yaml  willand_balance_rviz.rviz  willand_orabmap_rviz.rviz  willand_uneven_rviz.rviz
willand_description/include/: robot_wrench.h
willand_description/launch/: controller.launch  debug.launch  rqt_steering.launch  rs_rtabmap_d435.launch  sim_ninebot.launch  sim_with_balance.launch  sim_with_controller.launch  sim_with_rtabmap.launch  sim_with_uneven.launch  spawn.launch  spawn_uneven.launch
willand_description/lib/: mu_debug.py  mu_values.pb.cc  mu_values.pb.h  mu_values.proto  mu_values_pb2.py
willand_description/meshes/Lawn/: model.config  model.sdf
willand_description/scripts/: odom_process.py
willand_description/src/: contactRead.cpp  robot_wrench.cpp  robot_wrench_node.cpp
willand_description/urdf/: carmodel2.urdf  carmodel2.urdf.xacro  livox_mid360.urdf.xacro  materials.xacro  ninebot_model.xacro  willand.gazebo  willand.trans  willand.xacro  willand_carmodel.xacro
willand_description/worlds/: lawn_world.world  slope_world.world  slope_world_20deg.world
